--- a/services/terraform/module-analytics/spec/analytics-endpoint.yml
+++ b/services/terraform/module-analytics/spec/analytics-endpoint.yml
@@ -12,7 +12,7 @@ definitions:
       message:
         type: string
     type: object
-host: analytics-${suffix}.endpoints.${project}.cloud.goog
+host: analytics.endpoints.${project}.cloud.goog
 info:
   description: Analtyics REST API - Testing Environment
   title: Analytics REST API - Testing Environment
@@ -69,5 +69,5 @@ securityDefinitions:
     type: apiKey
 swagger: '2.0'
 x-google-endpoints:
-- name: analytics-${suffix}.endpoints.${project}.cloud.goog
+- name: analytics.endpoints.${project}.cloud.goog
   target: ${target}
