--- a/services/python/analytics-pipeline/src/requirements-endpoint.txt
+++ b/services/python/analytics-pipeline/src/requirements-endpoint.txt
@@ -1,4 +1,4 @@
-# Endpoint
+# Cloud Endpoint
 google-cloud-storage==1.16.1
 Flask-cors==3.0.8
 gunicorn==19.9.0
@@ -6,5 +6,3 @@ pycrypto==2.6.1
 gevent==1.4.0
 flask==1.0.3
 six==1.12.0
-
-# Scale Test
