--- a/services/k8s/analytics-endpoint/deployment.yaml
+++ b/services/k8s/analytics-endpoint/deployment.yaml
@@ -13,7 +13,7 @@ spec:
       - args:
         - --http_port=8081
         - --backend=127.0.0.1:8080
-        - --service=analytics.endpoints.logical-flame-194710.cloud.goog # [your Google project id]
+        - --service=analytics.endpoints.{GCLOUD_PROJECT_ID}.cloud.goog # Update
         - --rollout_strategy=managed
         - --service_account_key=/secrets/json/analytics-endpoint.json
         image: gcr.io/endpoints-release/endpoints-runtime:1
@@ -32,11 +32,11 @@ spec:
         - name: SECRET_P12
           value: /secrets/p12/analytics-gcs-writer.p12
         - name: BUCKET_NAME
-          value: logical-flame-194710-analytics # [your Google project id]-analytics
+          value: {GCLOUD_PROJECT_ID}-analytics # Update
         - name: GCP
-          value: logical-flame-194710 # [your Google project id]
+          value: {GCLOUD_PROJECT_ID} # Update
         - name: EMAIL
-          value: analytics-gcs-writer@logical-flame-194710.iam.gserviceaccount.com # [your Google project id]
+          value: analytics-gcs-writer@{GCLOUD_PROJECT_ID}.iam.gserviceaccount.com # Update
         image: gcr.io/logical-flame-194710/analytics-endpoint
         imagePullPolicy: Always
         name: analytics-deployment-server
