--- a/services/terraform/module-analytics/spec/analytics-endpoint.yml
+++ b/services/terraform/module-analytics/spec/analytics-endpoint.yml
@@ -14,8 +14,8 @@ definitions:
     type: object
 host: analytics.endpoints.${project}.cloud.goog
 info:
-  description: Analtyics REST API - Testing Environment
-  title: Analytics REST API - Testing Environment
+  description: Analtyics REST API
+  title: Analytics REST API
   version: 1.0.0
 paths:
   /v1/event:
