--- a/services/k8s/party/service.yaml
+++ b/services/k8s/party/service.yaml
@@ -15,4 +15,4 @@ spec:
     port: 4000
     targetPort: 9000
   type: LoadBalancer
-  loadBalancerIP: "[your Party IP address]"
+  loadBalancerIP: "[your Party IP address]" # Update
