--- a/services/k8s/gateway/deployment.yaml
+++ b/services/k8s/gateway/deployment.yaml
@@ -20,7 +20,7 @@ spec:
         args: [
           "--http_port=9001",
           "--http2_port=9000",
-          "--service=gateway.endpoints.[your Google project id].cloud.goog",
+          "--service=gateway.endpoints.[your project id].cloud.goog", # Update
           "--rollout_strategy=managed",
           "--backend=grpc://127.0.0.1:4040"
         ]
@@ -28,7 +28,7 @@ spec:
           - containerPort: 9000
           - containerPort: 9001
       - name: gateway
-        image: gcr.io/[your Google project id]/gateway
+        image: gcr.io/[your project id]/gateway # Update
         imagePullPolicy: Always
         ports:
         - containerPort: 4040
