--- a/services/docker/docker_compose_local_analytics.yml
+++ b/services/docker/docker_compose_local_analytics.yml
@@ -8,22 +8,22 @@ services:
       - "4040:4040"
       - "8080:8080"
     volumes:
-      - "${LOCAL_SA_KEY_JSON_ESP}:/esp/esp.json"
+      - "${SECRET_JSON_ESP}:/esp/esp.json"
     command:
       - "--http_port=8080"
       - "--backend=analytics:8080"
-      - "--service=analytics.endpoints.${GOOGLE_PROJECT_ID}.cloud.goog"
+      - "--service=analytics.endpoints.${GCP}.cloud.goog"
       - "--rollout_strategy=managed"
       - "--service_account_key=/esp/esp.json"
 
   analytics:
     volumes:
-      - "${LOCAL_SA_KEY_JSON}:/secrets/json/analytics-gcs-writer.json"
-      - "${LOCAL_SA_KEY_P12}:/secrets/p12/analytics-gcs-writer.p12"
-    image: "gcr.io/${GOOGLE_PROJECT_ID}/analytics-endpoint:latest"
+      - "${SECRET_JSON}:/secrets/json/analytics-gcs-writer.json"
+      - "${SECRET_P12}:/secrets/p12/analytics-gcs-writer.p12"
+    image: "gcr.io/${GCP}/analytics-endpoint:latest"
     environment:
       SECRET_JSON: "/secrets/json/analytics-gcs-writer.json"
       SECRET_P12: "/secrets/p12/analytics-gcs-writer.p12"
-      BUCKET_NAME: "${GOOGLE_PROJECT_ID}-analytics"
-      GCP: "${GOOGLE_PROJECT_ID}"
-      EMAIL: "analytics-gcs-writer@${GOOGLE_PROJECT_ID}.iam.gserviceaccount.com"
+      BUCKET_NAME: "${GCP}-analytics"
+      GCP: "${GCP}"
+      EMAIL: "analytics-gcs-writer@${GCP}.iam.gserviceaccount.com"
