--- a/services/k8s/config.yaml
+++ b/services/k8s/config.yaml
@@ -6,4 +6,4 @@ metadata:
 data:
   redis.connection-string: "10.0.3.3:6379"
   spatialos.project: "beta_princess_grey_193"
-  playfab.title: "Unknown"
+  playfab.title: "580A2"
