--- a/services/k8s/gateway/deployment.yaml
+++ b/services/k8s/gateway/deployment.yaml
@@ -52,3 +52,24 @@ spec:
         - "$(REDIS_CONNECTION_STRING)"
         - --grpc_service_port
         - "4040"
+        - --analytics.endpoint
+        - "http://analytics.endpoints.logical-flame-194710.cloud.goog:80/v1/event"
+        - --analytics.allow-insecure-endpoint
+        - --analytics.config-file-path
+        - "/config/config-analytics.yaml"
+        - --analytics.gcp-key-path
+        - "/secrets/analytics-api-key.txt"
+        - --analytics.environment
+        - "testing"
+        volumeMounts:
+        - mountPath: /secrets/
+          name: analytics-api-key
+        - mountPath: /config/
+          name: config-analytics
+      volumes:
+      - name: analytics-api-key
+        secret:
+          secretName: analytics-api-key
+      - name: config-analytics
+        configMap:
+          name: config-analytics
