--- a/services/csharp/DataModel/DataModel.csproj
+++ b/services/csharp/DataModel/DataModel.csproj
@@ -7,6 +7,7 @@
     <Version>1.0.0</Version>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.TestPlatform.ObjectModel" Version="16.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
 </Project>
