--- a/services/k8s/gateway-internal/deployment.yaml
+++ b/services/k8s/gateway-internal/deployment.yaml
@@ -35,8 +35,34 @@ spec:
             configMapKeyRef:
               name: online-services-config
               key: redis.connection-string
+        - name: SPATIAL_PROJECT
+          valueFrom:
+            configMapKeyRef:
+              name: online-services-config
+              key: spatialos.project
         args:
         - --redis_connection_string
         - "$(REDIS_CONNECTION_STRING)"
         - --grpc_service_port
         - "4040"
+        - --analytics.endpoint
+        - "http://analytics.endpoints.logical-flame-194710.cloud.goog:80/v1/event"
+        - --analytics.allow-insecure-endpoint
+        - --analytics.config-file-path
+        - "/config/analytics-config.yaml"
+        - --analytics.gcp-key-path
+        - "/secrets/analytics-api-key.txt"
+        - --analytics.environment
+        - "testing"
+        volumeMounts:
+        - mountPath: /secrets/
+          name: analytics-api-key
+        - mountPath: /config/
+          name: analytics-config
+      volumes:
+      - name: analytics-api-key
+        secret:
+          secretName: analytics-api-key
+      - name: analytics-config
+        configMap:
+          name: analytics-config
