--- a/services/csharp/SampleMatcher/SampleMatcher.csproj
+++ b/services/csharp/SampleMatcher/SampleMatcher.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Mono.Posix.NETStandard" Version="1.0.0" />
     <PackageReference Include="Serilog.Formatting.Compact" Version="1.0.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Base.Matcher\Base.Matcher.csproj" />
