--- a/services/k8s/playfab-auth/deployment.yaml
+++ b/services/k8s/playfab-auth/deployment.yaml
@@ -68,7 +68,7 @@ spec:
         - "http://analytics.endpoints.logical-flame-194710.cloud.goog:80/v1/event"
         - --analytics.allow-insecure-endpoint
         - --analytics.config-file-path
-        - "/config/config-analytics.yaml"
+        - "/config/analytics-config.yaml"
         - --analytics.gcp-key-path
         - "/secrets/analytics-api-key.txt"
         - --analytics.environment
@@ -77,11 +77,11 @@ spec:
         - mountPath: /secrets/
           name: analytics-api-key
         - mountPath: /config/
-          name: config-analytics
+          name: analytics-config
       volumes:
       - name: analytics-api-key
         secret:
           secretName: analytics-api-key
-      - name: config-analytics
+      - name: analytics-config
         configMap:
-          name: config-analytics
+          name: analytics-config
