instrumented deployment pool

--- a/services/csharp/DeploymentPool/DeploymentPool.csproj
+++ b/services/csharp/DeploymentPool/DeploymentPool.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Base.Server\Base.Server.csproj" />
+    <ProjectReference Include="..\Common\Common.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Improbable.SpatialOS.Platform" Version="14.0.0" />
