--- a/services/k8s/config.yaml
+++ b/services/k8s/config.yaml
@@ -4,6 +4,6 @@ metadata:
   name: online-services-config
   selfLink: /api/v1/namespaces/default/configmaps/online-services-config
 data:
-  redis.connection-string: "10.0.3.3:6379"
-  spatialos.project: "beta_princess_grey_193"
-  playfab.title: "580A2"
+  redis.connection-string: "[your Redis host]:6379"
+  spatialos.project: "[your SpatialOS project id]"
+  playfab.title: "[your PlayFab title ID]"
