--- a/services/k8s/gateway-internal/deployment.yaml
+++ b/services/k8s/gateway-internal/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: gateway-internal
-        image: gcr.io/logical-flame-194710/gateway-internal # Update
+        image: gcr.io/[your Google project id]/gateway-internal # Update
         imagePullPolicy: Always
         ports:
         - containerPort: 4040
@@ -41,19 +41,21 @@ spec:
               name: online-services-config
               key: spatialos.project
         args:
+        # Gateway Internal Arguments
         - --redis_connection_string
         - "$(REDIS_CONNECTION_STRING)"
         - --grpc_service_port
         - "4040"
+        # Analytics Instrumentation Arguments
         - --analytics.endpoint
-        - "http://analytics.endpoints.logical-flame-194710.cloud.goog:80/v1/event"
+        - "http://analytics.endpoints.[your Google project id].cloud.goog:80/v1/event"
         - --analytics.allow-insecure-endpoint
         - --analytics.config-file-path
         - "/config/analytics-config.yaml"
         - --analytics.gcp-key-path
         - "/secrets/analytics-api-key.txt"
         - --analytics.environment
-        - "testing"
+        - "[your analytics environment]" # Update: {testing, staging, ...}
         volumeMounts:
         - mountPath: /secrets/
           name: analytics-api-key
