--- a/services/k8s/sample-matcher/deployment.yaml
+++ b/services/k8s/sample-matcher/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: sample-matcher
-        image: gcr.io/logical-flame-194710/sample-matcher # Update
+        image: gcr.io/[your Google project id]/sample-matcher # Update
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
@@ -36,15 +36,16 @@ spec:
         - name: GATEWAY_SERVICE_TARGET
           value: "gateway-internal.default.svc.cluster.local:80"
         args:
+        # Analytics Instrumentation Arguments
         - --analytics.endpoint
-        - "http://analytics.endpoints.logical-flame-194710.cloud.goog:80/v1/event"
+        - "http://analytics.endpoints.[your Google project id].cloud.goog:80/v1/event"
         - --analytics.allow-insecure-endpoint
         - --analytics.config-file-path
         - "/config/analytics-config.yaml"
         - --analytics.gcp-key-path
         - "/secrets/analytics-api-key.txt"
         - --analytics.environment
-        - "testing"
+        - "[your analytics environment]" # Update: {testing, staging, ...}
         volumeMounts:
         - mountPath: /secrets/
           name: analytics-api-key
