--- a/services/k8s/config.yaml
+++ b/services/k8s/config.yaml
@@ -4,6 +4,7 @@ metadata:
   name: online-services-config
   selfLink: /api/v1/namespaces/default/configmaps/online-services-config
 data:
-  redis.connection-string: "{{your_redis_host}}:6379"
-  spatialos.project: "{{your_spatialos_project_name}}"
-  playfab.title: "{{your_playfab_title_id}}"
+  redis.connection-string: "10.0.3.3:6379"
+  spatialos.project: "beta_princess_grey_193"
+  playfab.title: "580A2"
+  matcher.default-tag: "open_world"
