--- a/services/k8s/gateway-internal/deployment.yaml
+++ b/services/k8s/gateway-internal/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: gateway-internal
-        image: gcr.io/{{your_google_project_id}}/gateway-internal # Update
+        image: gcr.io/logical-flame-194710/gateway-internal # Update
         imagePullPolicy: Always
         ports:
         - containerPort: 4040
@@ -48,14 +48,14 @@ spec:
         - "4040"
         # Analytics Instrumentation Arguments
         - --analytics.endpoint
-        - "http://analytics.endpoints.{{your_google_project_id}}.cloud.goog:80/v1/event" # Update
+        - "http://analytics.endpoints.logical-flame-194710.cloud.goog:80/v1/event" # Update
         - --analytics.allow-insecure-endpoint
         - --analytics.config-file-path
         - "/config/analytics-config.yaml"
         - --analytics.gcp-key-path
         - "/secrets/analytics-api-key.txt"
         - --analytics.environment
-        - "{{your_analytics_environment}}" # Update to one of: {testing, staging, ...}
+        - "testing" # Update to one of: {testing, staging, ...}
         volumeMounts:
         - mountPath: /secrets/
           name: analytics-api-key
