--- a/services/k8s/gateway/service.yaml
+++ b/services/k8s/gateway/service.yaml
@@ -15,4 +15,4 @@ spec:
     port: 4000
     targetPort: 9000
   type: LoadBalancer
-  loadBalancerIP: "{{your_gateway_host}}" # Update
+  loadBalancerIP: "35.189.247.134" # Update
