--- a/services/k8s/party/deployment.yaml
+++ b/services/k8s/party/deployment.yaml
@@ -20,7 +20,7 @@ spec:
         args: [
           "--http_port=9001",
           "--http2_port=9000",
-          "--service=party.endpoints.{{your_google_project_id}}.cloud.goog", # Update
+          "--service=party.endpoints.logical-flame-194710.cloud.goog", # Update
           "--rollout_strategy=managed",
           "--backend=grpc://127.0.0.1:4040"
         ]
@@ -28,7 +28,7 @@ spec:
           - containerPort: 9000
           - containerPort: 9001
       - name: party
-        image: gcr.io/{{your_google_project_id}}/party # Update
+        image: gcr.io/logical-flame-194710/party # Update
         imagePullPolicy: Always
         ports:
         - containerPort: 4040
@@ -55,14 +55,14 @@ spec:
         - "$(REDIS_CONNECTION_STRING)"
         # Analytics Instrumentation Arguments
         - --analytics.endpoint
-        - "http://analytics.endpoints.{{your_google_project_id}}.cloud.goog:80/v1/event" # Update
+        - "http://analytics.endpoints.logical-flame-194710.cloud.goog:80/v1/event" # Update
         - --analytics.allow-insecure-endpoint
         - --analytics.config-file-path
         - "/config/analytics-config.yaml"
         - --analytics.gcp-key-path
         - "/secrets/analytics-api-key.txt"
         - --analytics.environment
-        - "{{your_analytics_environment}}" # Update to one of: {testing, staging, ...}
+        - "testing" # Update to one of: {testing, staging, ...}
         volumeMounts:
         - mountPath: /secrets/
           name: analytics-api-key
