--- a/services/k8s/sample-matcher/deployment.yaml
+++ b/services/k8s/sample-matcher/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: sample-matcher
-        image: gcr.io/{{your_google_project_id}}/sample-matcher # Update
+        image: gcr.io/logical-flame-194710/sample-matcher # Update
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
@@ -28,6 +28,11 @@ spec:
             secretKeyRef:
               name: spatialos-refresh-token
               key: service-account.txt
+        - name: MATCH_TAG
+          valueFrom:
+            configMapKeyRef:
+              name: online-services-config
+              key: matcher.default-tag
         - name: SPATIAL_PROJECT
           valueFrom:
             configMapKeyRef:
@@ -38,14 +43,14 @@ spec:
         args:
         # Analytics Instrumentation Arguments
         - --analytics.endpoint
-        - "http://analytics.endpoints.{{your_google_project_id}}.cloud.goog:80/v1/event" # Update
+        - "http://analytics.endpoints.logical-flame-194710.cloud.goog:80/v1/event" # Update
         - --analytics.allow-insecure-endpoint
         - --analytics.config-file-path
         - "/config/analytics-config.yaml"
         - --analytics.gcp-key-path
         - "/secrets/analytics-api-key.txt"
         - --analytics.environment
-        - "{{your_analytics_environment}}" # Update to one of: {testing, staging, ...}
+        - "testing" # Update to one of: {testing, staging, ...}
         volumeMounts:
         - mountPath: /secrets/
           name: analytics-api-key
